fix: HTTP codes alignment with REST semantics